# ignoretree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: explain_decisions.py  walk_tree.py
src/ignoretree/: __init__.py  models.py  reader.py  resolver.py
tests/: conftest.py  test_git_compliance.py  test_reader.py  test_resolver.py
